# ECG_Phase3

./: README.md
Phase3/phase3/: server_app.py
quickstart-pytorch/: pyproject.toml
quickstart-pytorch/pytorchexample/: __init__.py  client_app.py  server_app.py  task.py
